// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <section
    class="col-md-8 Home"
  >
    <div
      class="card"
    >
      <div
        class="card-title"
      >
        <h1>
          Jobly
        </h1>
      </div>
      <div
        class="card-body"
      >
        <p
          class="card-text"
        >
          All the jobs in one, convenient place.
        </p>
        <h2>
          Welcome Back, testfirst!
        </h2>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`matches snapshot when logged in 1`] = `
<DocumentFragment>
  <section
    class="col-md-8 Home"
  >
    <div
      class="card"
    >
      <div
        class="card-title"
      >
        <h1>
          Jobly
        </h1>
      </div>
      <div
        class="card-body"
      >
        <p
          class="card-text"
        >
          All the jobs in one, convenient place.
        </p>
        <h2>
          Welcome Back, testfirst!
        </h2>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <section
    class="col-md-8 Home"
  >
    <div
      class="card"
    >
      <div
        class="card-title"
      >
        <h1>
          Jobly
        </h1>
      </div>
      <div
        class="card-body"
      >
        <p
          class="card-text"
        >
          All the jobs in one, convenient place.
        </p>
         
        <p
          class="card-text"
        >
          <a
            class="Home-Link"
            href="/login"
          >
            <button
              class="btn btn-secondary"
            >
              Login
            </button>
          </a>
          <a
            class="Home-Link"
            href="/signup"
          >
            <button
              class="btn btn-secondary"
            >
              Signup
            </button>
          </a>
        </p>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
